--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "http://ericalawson.github.io/smite-timeline-react",
-
   "dependencies": {
     "@reduxjs/toolkit": "^1.3.6",
     "@testing-library/jest-dom": "^4.2.4",
@@ -21,6 +20,7 @@
     "react-scripts": "3.4.1",
     "typescript": "^3.9.2"
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -45,6 +45,11 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "babel-plugin-import": "^1.13.0",
+    "css-loader": "^3.6.0",
+    "gh-pages": "^3.1.0",
+    "less": "^3.12.0",
+    "less-loader": "^6.2.0",
+    "style-loader": "^1.2.1"
   }
 }
