--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "typescript": "^3.9.2"
   },
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -45,11 +44,6 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.13.0",
-    "css-loader": "^3.6.0",
-    "gh-pages": "^3.1.0",
-    "less": "^3.12.0",
-    "less-loader": "^6.2.0",
-    "style-loader": "^1.2.1"
+    "gh-pages": "^3.1.0"
   }
 }
