Trying to make StatBlock exportable so Smite Wiki Scraper can use it. I'm trying to keep the definitions consistent between the .json that is scraped, and how smite-timeline will use it.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "smite-timeline",
+  "exports": {
+    "./StatBlock": "./src/data_objects/StatBlock.ts"
+  },
   "version": "0.1.0",
   "private": true,
   "homepage": "http://ericalawson.github.io/smite-timeline-react",
