--- a/package.json
+++ b/package.json
@@ -7,21 +7,22 @@
   "private": true,
   "homepage": "http://ericalawson.github.io/smite-timeline-react",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.0",
+    "@reduxjs/toolkit": "^1.6.0",
+    "@smite-timeline/smite-game-objects": "^1.0.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.20.4",
-    "@types/react": "^16.14.4",
-    "@types/react-dom": "^16.9.11",
-    "@types/react-redux": "^7.1.16",
-    "antd": "^4.12.3",
+    "@types/node": "^12.20.16",
+    "@types/react": "^16.14.11",
+    "@types/react-dom": "^16.9.14",
+    "@types/react-redux": "^7.1.18",
+    "antd": "^4.16.7",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-redux": "^7.2.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "^3.4.4",
-    "typescript": "^3.9.9"
+    "typescript": "^3.9.10"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +48,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.2.3"
   }
 }
