--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,25 @@
 {
   "name": "smite-timeline-server",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "backend for smite timeline web app",
-  "main": "index.js",
+  "type": "commonjs",
   "dependencies": {
+    "@types/node": "^12.20.16",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@smite-timeline/smite-game-objects": "^1.0.6",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "nodemon": "^2.0.16"
+  },
   "scripts": {
+    "start": "ts-node server.ts",
     "test": "tsc test"
   },
   "repository": {
