--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "start": "ts-node server.ts",
+    "start:nodemon": "nodemon",
     "test": "tsc test"
   },
   "repository": {
