--- a/App/package.json
+++ b/App/package.json
@@ -19,9 +19,8 @@
     "@types/react-redux": "^7.1.24",
     "antd": "^4.20.6",
     "axios": "^0.27.2",
-    "nth-check": "^2.0.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-redux": "^7.2.8",
     "react-scripts": "^5.0.1",
     "redux-thunk": "^2.4.1",
@@ -51,6 +50,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "moxios": "^0.4.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
