--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "backend for smite timeline web app",
   "type": "commonjs",
   "dependencies": {
+    "@babel/runtime": "^7.18.3",
     "@types/node": "^12.20.16",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
