Some changes to test objects

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/EricALawson/smite-timeline-react/issues"
   },
-  "homepage": "https://github.com/EricALawson/smite-timeline-react#readme"
+  "homepage": "https://github.com/EricALawson/smite-timeline-react#readme",
+  "dependencies": {
+    "@smite-timeline/smite-game-objects": "^1.0.7"
+  }
 }
