--- a/App/package.json
+++ b/App/package.json
@@ -8,7 +8,7 @@
   "homepage": "http://ericalawson.github.io/smite-timeline-react",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
-    "@smite-timeline/smite-game-objects": "^1.0.6",
+    "@smite-timeline/smite-game-objects": "^1.0.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
@@ -22,7 +22,6 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^7.2.8",
-    "react-scripts": "^5.0.1",
     "redux-thunk": "^2.4.1",
     "typescript": "^3.9.10"
   },
@@ -52,6 +51,7 @@
   "devDependencies": {
     "gh-pages": "^3.2.3",
     "moxios": "^0.4.0",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "react-scripts": "^5.0.1"
   }
 }
