Monorepo working, as long as it is built. Needs testing for watching changes, and rebuilding as needed.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,17 @@
         "rootDir": "./src",
         "outDir": "./superbin"
     },
+    "references": [
+        {
+            "path":"./packages/App"
+        },
+        {
+            "path": "./packages/server"
+        },
+        {
+            "path": "./packages/shared"
+        }
+    ],
     "files": [
         "./src/index.ts"
     ]
