--- a/packages/App/package.json
+++ b/packages/App/package.json
@@ -8,12 +8,9 @@
   "homepage": "http://ericalawson.github.io/smite-timeline-react",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
-    "@smite-timeline/smite-game-objects": "^1.0.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "@types/react-redux": "^7.1.24",
@@ -22,8 +19,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^7.2.8",
-    "redux-thunk": "^2.4.1",
-    "typescript": "^3.9.10"
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
