--- a/packages/App/tsconfig.json
+++ b/packages/App/tsconfig.json
@@ -16,8 +16,10 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "rootDir": "./src",
+    "outDir": "./bin",
+    "composite": true
   },
   "include": [
     "src"
