--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,22 +5,19 @@
   "type": "commonjs",
   "dependencies": {
     "@babel/runtime": "^7.18.3",
-    "@types/node": "^12.20.16",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "ts-node": "^10.7.0"
   },
   "devDependencies": {
-    "@smite-timeline/smite-game-objects": "^1.0.6",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "nodemon": "^2.0.16"
   },
   "scripts": {
-    "start": "ts-node server.ts",
+    "start": "ts-node src/server.ts",
     "start:nodemon": "nodemon",
     "test": "tsc test"
   },
