--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
   },
   "homepage": "https://github.com/EricALawson/smite-timeline-react#readme",
   "dependencies": {
-    "typescript": "^4.2.4",
-    "@smite-timeline/smite-game-objects": "^1.0.7"
-
+    "@types/mongodb": "^3.6.7",
+    "mongodb": "^4.6.0",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/jest": "^24.9.1",
-    "@types/node": "^17.0.35"
+    "@types/node": "^17.0.35",
+    "jest": "^28.1.1",
+    "ts-jest": "^28.0.5",
+    "ts-node-dev": "^2.0.0"
   },
   "workspaces": [
     "packages/*"
