--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,9 +7,7 @@
     "@babel/runtime": "^7.18.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mongodb": "^4.6.0",
-    "ts-node": "^10.7.0"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
