--- a/.gitignore
+++ b/.gitignore
@@ -14,15 +14,16 @@
 **/bin
 
 # misc
+**/.env
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .eslintcache
+**/**.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .eslintcache
-server/config.env
