--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@types/mongodb": "^3.6.7",
     "mongodb": "^4.6.0",
     "ts-node": "^10.8.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
     "@types/jest": "^24.9.1",
